# PokerBot

./: ProofOfConcept.py  README.md  info.txt  my_cfr.py  project_kuhn.py  test.txt  test_branch.txt
cpp/: CMakeLists.txt  a.out  card.h  game.h  main.cpp  makeme.sh  player.cpp  player.h  pymakeme.sh  showdown.h  table.cpp  table.h  test.py  trainNN.ipynb
cpp/include/: bench.h  card.h  game.h  player.h  pybindings.h  showdown.h  strategy.h  table.h
cpp/src/: bench.cpp  main.cpp  player.cpp  pybindings.cpp  showdown.cpp  strategy.cpp  table.cpp  (+1 more)
cpp_charles_temp/: test.py
cpp_temp/: asdf.py  makeme.sh  pymakeme.sh  test.py
matt/: MCtest.py  better_showdown.py  my_bot.py  poker.py  poker2.py  poker_charlesfish.py  poker_sharkwhale.py
mike/: CMakeLists.txt  asdf.py  makeme.sh  pymakeme.sh  testoutput.txt  trainNN.ipynb
mike/include/: bench.h  card.h  game.h  player.h  pybindings.h  strategy.h  table.h
mike/src/: bench.cpp  cfr.cpp  main  main.cpp  player.cpp  pybindings.cpp  showdown.cpp  strategy.cpp  table.cpp  testoutput.txt
mike2/: CMakeLists.txt
mike2/include/: bench.h  cfr.h  game.h  player.h  strategy.h
mike2/src/: bench.cpp  main.cpp  pybindings.cpp  strategy.cpp
misc or old/: ProofOfConcept.py
python_cfr/: better_showdown.py  blah.txt  helper_objects.py  my_cfr.py  my_mccfr.py  my_mccfr_handbuckets.py  my_mccfr_handbuckets_simplified.py  my_mccfr_hybrid-handbuckets.py  program.prof  project_kuhn.py  project_rps.py  requirements.txt  temp.ipynb  temp.py  temp.txt  trained_model.json  trained_model_street-1.json  trained_model_street-1.pickle
(+29 files in other folders)
